# 360

./: .gitignore  README.md  gradio_app.py  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  streamlit_app.py
customer360/: __init__.py  resolution.py  scoring.py  units.py  utils.py
customer360.egg-info/: PKG-INFO  SOURCES.txt  c  entry_points.txt  requires.txt  top_level.txt
scripts/: install_and_run_cli.bat  install_and_run_cli.sh  install_and_run_gradio.bat  install_and_run_gradio.sh  install_and_run_streamlit.bat  install_and_run_streamlit.sh
